Сonnected the system of authentication and authorization(Spring Security)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=9091
 spring.datasource.platform=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/petProject
 spring.datasource.username=postgres
-spring.datasource.password=1029384756
+spring.datasource.password=root
 
 spring.datasource.initialization-mode=always
 
